// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingCard Molecule tests should render SettingCard correctly 1`] = `
<DocumentFragment>
  .c3 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  margin-bottom: 1.25rem;
  font-family: 'Roboto',sans-serif;
  color: #000000;
}

.c6 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  margin-right: 0.75rem;
  font-family: 'Roboto',sans-serif;
  color: #757575;
}

.c2 {
  font-size: 1.125rem;
  line-height: 1.625rem;
  font-weight: 500;
  font-family: roboto;
  margin-bottom: 0.25rem;
  font-family: 'Roboto',sans-serif;
  color: #000000;
}

.c7 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #000000;
  color: #FFFFFF;
  width: normal;
  height: normal;
  margin-left: auto;
  width: fit-content;
}

.c7:hover:not(:active, :disabled) {
  background-color: #333;
}

.c7 .material-symbols-sharp {
  color: inherit;
}

.c7:disabled {
  cursor: not-allowed;
}

.c4 {
  height: 1px;
  border: none;
  background-color: #EEEEEE;
  width: 100%;
}

.c0 {
  display: flex;
  flex-direction: column;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
  background-color: #FFFFFF;
  border-radius: 0.375rem;
}

.c1 {
  display: flex;
  flex-direction: column;
  padding: 1.25rem;
}

.c5 {
  display: flex;
  align-items: center;
  padding: 1rem 1.25rem;
}

<div
    class="c0 "
    data-testid="card"
    variant="default"
  >
    <div
      class="c1"
    >
      <h3
        class="c2"
        data-testid="setting-title"
        font-family="roboto"
        mb="0.25rem"
      >
        title
      </h3>
      <p
        class="c3"
        data-testid="setting-title"
        font-family="roboto"
        mb="1.25rem"
      >
        description
      </p>
      <div>
        renders correctly
      </div>
    </div>
    <hr
      class="c4"
      data-testid="horizontal-rule"
    />
    <div
      class="c5"
    >
      <p
        class="c6"
        data-testid="setting-title"
        font-family="roboto"
        mr="0.75rem"
      />
      <button
        class="c7"
        data-testid="button"
        ml="auto"
        variant="secondary"
      >
        <span
          class=""
        >
          button
        </span>
      </button>
    </div>
     
  </div>
</DocumentFragment>
`;

exports[`SettingCard Molecule tests should render SettingCard with Input as children 1`] = `
<DocumentFragment>
  .c3 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  margin-bottom: 1.25rem;
  font-family: 'Roboto',sans-serif;
  color: #000000;
}

.c8 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  margin-right: 0.75rem;
  font-family: 'Roboto',sans-serif;
  color: #757575;
}

.c2 {
  font-size: 1.125rem;
  line-height: 1.625rem;
  font-weight: 500;
  font-family: roboto;
  margin-bottom: 0.25rem;
  font-family: 'Roboto',sans-serif;
  color: #000000;
}

.c9 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #000000;
  color: #FFFFFF;
  width: normal;
  height: normal;
  margin-left: auto;
  width: fit-content;
}

.c9:hover:not(:active, :disabled) {
  background-color: #333;
}

.c9 .material-symbols-sharp {
  color: inherit;
}

.c9:disabled {
  cursor: not-allowed;
}

.c6 {
  height: 1px;
  border: none;
  background-color: #EEEEEE;
  width: 100%;
}

.c0 {
  display: flex;
  flex-direction: column;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
  background-color: #FFFFFF;
  border-radius: 0.375rem;
}

.c4 {
  max-width: 400px;
  position: relative;
  display: flex;
  align-items: center;
}

.c5 {
  border: none;
  background-color: #F6F6F6;
  height: 2.75rem;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  font-weight: 400;
  width: 100%;
  padding: 0 1rem;
  color: #000000;
}

.c5::placeholder {
  color: #757575;
}

.c5:focus {
  outline: 2px solid #000000;
}

.c1 {
  display: flex;
  flex-direction: column;
  padding: 1.25rem;
}

.c7 {
  display: flex;
  align-items: center;
  padding: 1rem 1.25rem;
}

<div
    class="c0 "
    data-testid="card"
    variant="default"
  >
    <div
      class="c1"
    >
      <h3
        class="c2"
        data-testid="setting-title"
        font-family="roboto"
        mb="0.25rem"
      >
        title
      </h3>
      <p
        class="c3"
        data-testid="setting-title"
        font-family="roboto"
        mb="1.25rem"
      >
        description
      </p>
      <div
        class="c4"
        data-testid="input-container"
        maxwidth="400"
      >
        <input
          class="c5"
          data-testid="input"
          format="normal"
          name="feature"
          placeholder="placeholder"
          type="text"
          value=""
        />
      </div>
    </div>
    <hr
      class="c6"
      data-testid="horizontal-rule"
    />
    <div
      class="c7"
    >
      <p
        class="c8"
        data-testid="setting-title"
        font-family="roboto"
        mr="0.75rem"
      >
        text
      </p>
      <button
        class="c9"
        data-testid="button"
        ml="auto"
        variant="secondary"
      >
        <span
          class=""
        >
          button
        </span>
      </button>
    </div>
     
  </div>
</DocumentFragment>
`;

exports[`SettingCard Molecule tests should render SettingCard with text 1`] = `
<DocumentFragment>
  .c3 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  margin-bottom: 1.25rem;
  font-family: 'Roboto',sans-serif;
  color: #000000;
}

.c6 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  margin-right: 0.75rem;
  font-family: 'Roboto',sans-serif;
  color: #757575;
}

.c2 {
  font-size: 1.125rem;
  line-height: 1.625rem;
  font-weight: 500;
  font-family: roboto;
  margin-bottom: 0.25rem;
  font-family: 'Roboto',sans-serif;
  color: #000000;
}

.c7 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #000000;
  color: #FFFFFF;
  width: normal;
  height: normal;
  margin-left: auto;
  width: fit-content;
}

.c7:hover:not(:active, :disabled) {
  background-color: #333;
}

.c7 .material-symbols-sharp {
  color: inherit;
}

.c7:disabled {
  cursor: not-allowed;
}

.c4 {
  height: 1px;
  border: none;
  background-color: #EEEEEE;
  width: 100%;
}

.c0 {
  display: flex;
  flex-direction: column;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
  background-color: #FFFFFF;
  border-radius: 0.375rem;
}

.c1 {
  display: flex;
  flex-direction: column;
  padding: 1.25rem;
}

.c5 {
  display: flex;
  align-items: center;
  padding: 1rem 1.25rem;
}

<div
    class="c0 "
    data-testid="card"
    variant="default"
  >
    <div
      class="c1"
    >
      <h3
        class="c2"
        data-testid="setting-title"
        font-family="roboto"
        mb="0.25rem"
      >
        title
      </h3>
      <p
        class="c3"
        data-testid="setting-title"
        font-family="roboto"
        mb="1.25rem"
      >
        description
      </p>
      <div>
        renders with text
      </div>
    </div>
    <hr
      class="c4"
      data-testid="horizontal-rule"
    />
    <div
      class="c5"
    >
      <p
        class="c6"
        data-testid="setting-title"
        font-family="roboto"
        mr="0.75rem"
      >
        text
      </p>
      <button
        class="c7"
        data-testid="button"
        ml="auto"
        variant="secondary"
      >
        <span
          class=""
        >
          button
        </span>
      </button>
    </div>
     
  </div>
</DocumentFragment>
`;
